syntax = "proto3";
option go_package ="./pb";
package demo.machine;

service MachineService {
    rpc Create (MachineCreateRequest) returns (MachineCreateReply);
    rpc Remove (MachineRemoveRequest) returns (MachineRemoveReply);
    rpc Info (MachineInfoRequest) returns (MachineInfoReply);
    rpc List (MachineListRequest) returns (MachineListReply);
}

message MachineCreateRequest {
    // length > 6
    string name = 1;
}
message MachineCreateReply {
	MachineError error = 1;
	Machine data = 2;
}

message MachineRemoveRequest {
    // required
    int64 MachineID = 1;
}
message MachineRemoveReply {
	MachineError error = 1;
}

message MachineInfoRequest {
    // required
    int64 MachineID = 1;
}
message MachineInfoReply {
	MachineError error = 1;
	Machine data = 2;
}

message MachineListRequest {
    // default 1
    int64 page = 1;
    // default 10
    int64 count = 2;
    string key = 3;
    string value = 4;
}
message MachineListReply {
	MachineError error = 1;
    repeated Machine data = 2;
    int64 total = 3;
}

message Machine {
    int64 MachineID = 1;
    string name = 2;
}

message MachineError {
    int64 code = 1;
    string info = 2;
}
